@@ -1,7 +1,7 @@
 # Process this file with automake to produce Makefile.in
 
 
-INCLUDES = -I$(top_srcdir)/gcrypt -I$(top_srcdir)/mpi
+INCLUDES = -I$(top_srcdir)/src 
 
 noinst_LTLIBRARIES = libcipher.la
 
