@@ -31,6 +31,8 @@
 #define G10_MPI_INTERNAL_H
 
 #include "mpi-asm-defs.h"
+
+#ifndef BITS_PER_MPI_LIMB
 #if BYTES_PER_MPI_LIMB == SIZEOF_UNSIGNED_INT
   typedef unsigned int mpi_limb_t;
   typedef   signed int mpi_limb_signed_t;
@@ -47,7 +49,8 @@
   #error BYTES_PER_MPI_LIMB does not match any C type
 #endif
 #define BITS_PER_MPI_LIMB    (8*BYTES_PER_MPI_LIMB)
-#define DID_MPI_LIMB_TYPEDEF 1
+#endif /*BITS_PER_MPI_LIMB*/
+
 #include "mpi.h"
 
 /* If KARATSUBA_THRESHOLD is not already defined, define it to a
