@@ -1,5 +1,7 @@
 2000-12-19  Werner Koch  <wk@gnupg.org>
 
+	* types.h: Moved from ../include to here.
+
  	Major change:
 	Removed all GnuPG stuff and renamed this piece of software
 	to gcrypt. 
